// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.protocol.v0;

import "google/protobuf/empty.proto";
import "com/digitalasset/canton/participant/protocol/v0/ledger_sync_event.proto";

message SubmissionTrackingData {
  // using a oneof as an extension point for other tracking types in the future
  oneof tracking {
    TransactionSubmissionTrackingData transaction = 1;
  }
}

message TransactionSubmissionTrackingData {
  com.digitalasset.canton.participant.protocol.v0.CompletionInfo completion_info = 1;
  RejectionCause rejection_cause = 2;

  message RejectionCause {
    oneof cause {
      google.protobuf.Empty timeout = 1;
      com.digitalasset.canton.participant.protocol.v0.CommandRejected.GrpcRejectionReasonTemplate rejection_reason_template = 2;
    }
  }
}
